--- a/advect.org/src/pages/docs/recipes.astro
+++ b/advect.org/src/pages/docs/recipes.astro
@@ -4,7 +4,8 @@ import DocsLayout from "../../layouts/DocsLayout.astro";
 
 export const pageInfo: DocPage = {
     name:"Recipes",
-    index:3
+    index:3,
+    hide:true
 }
 ---
 
