--- a/advect.org/src/snippets/docs/UsingIf.astro
+++ b/advect.org/src/snippets/docs/UsingIf.astro
@@ -27,7 +27,7 @@ import CodeExample from "../../components/CodeExample.astro";
     </div>
     <div class="column">
         <p>
-            The <code>&lt;if&gt;</code> element is a <strong>conditional rendering mechanism</strong> that dynamically displays content based on a specified condition. It evaluates the expression provided in the <code>check</code> attribute and renders the corresponding content accordingly. Here's how it works in this context:
+            The <code>&lt;if&gt;</code> virtual element is a <strong>conditional rendering mechanism</strong> that dynamically displays content based on a specified condition. It evaluates the expression provided in the <code>check</code> attribute and renders the corresponding content accordingly. Here's how it works in this context:
         </p>
     </div>
 </div>
