--- a/advect.org/src/pages/docs/recipes.astro
+++ b/advect.org/src/pages/docs/recipes.astro
@@ -1,5 +1,5 @@
 ---
-import type { DocPage } from "../../data/docs";
+import { docPages, type DocPage } from "../../data/docs";
 import DocsLayout from "../../layouts/DocsLayout.astro";
 
 export const pageInfo: DocPage = {
@@ -9,7 +9,7 @@ export const pageInfo: DocPage = {
 }
 ---
 
-<DocsLayout>
+<DocsLayout docPages={docPages}>
     <div class="container content">
         <div>
             <h1 class="title is-3 signature-effect">Recipes</h1>
