--- a/advect.org/src/pages/docs/custom-elements.astro
+++ b/advect.org/src/pages/docs/custom-elements.astro
@@ -1,5 +1,5 @@
 ---
-import type { DocPage } from "../../data/docs";
+import { docPages, type DocPage } from "../../data/docs";
 import DocsLayout from "../../layouts/DocsLayout.astro";
 import ComponentAPI from "../../snippets/docs/ComponentAPI.astro";
 import CreatingYourFirstComponent from "../../snippets/docs/CreatingYourFirstComponent.astro";
@@ -12,7 +12,7 @@ export const pageInfo: DocPage = {
 }
 ---
 
-<DocsLayout>
+<DocsLayout docPages={docPages}>
     <div class="container">
         <section>
             <div class="content">
