change from old

--- a/advect.org/src/layouts/DocsLayout.astro
+++ b/advect.org/src/layouts/DocsLayout.astro
@@ -2,10 +2,9 @@
 import Footer from "./Footer.astro";
 import Header from "./Header.astro";
 import HeadAssets from "./HeadAssets.astro";
-
-const docPages:DocPages = Astro.props.docPages;
 import Breadcrumb from "../components/Breadcrumb.astro";
-import type { DocPages } from "../data/docs";
+import  { type DocPages, docPages } from "../data/docs";
+
 
 const sortedDocPages = docPages.sort((a, b) => {
   return a.pageInfo.index - b.pageInfo.index;
