--- a/advect.org/src/pages/docs/custom-elements.astro
+++ b/advect.org/src/pages/docs/custom-elements.astro
@@ -4,7 +4,6 @@ import DocsLayout from "../../layouts/DocsLayout.astro";
 import ComponentAPI from "../../snippets/docs/ComponentAPI.astro";
 import CreatingYourFirstComponent from "../../snippets/docs/CreatingYourFirstComponent.astro";
 import ElementReferences from "../../snippets/docs/ElementReferences.astro";
-import FirstComponent from "../../snippets/FirstComponent.astro";
 
 export const pageInfo: DocPage = {
     name:"Custom Elements",
@@ -23,7 +22,7 @@ export const pageInfo: DocPage = {
                     </p>
                 </div>
                 <hr>
-                <CreatingYourFirstComponent></CreatingYourFirstComponent>
+                <CreatingYourFirstComponent/>
             </div>
         </section>
         <hr>
