--- a/advect.org/src/data/docs/advect-view.astro
+++ b/advect.org/src/data/docs/advect-view.astro
@@ -1,7 +1,6 @@
 ---
 import CodeExample from "../../components/CodeExample.astro";
 import { docPages, type DocPage } from "../../data/docs";
-import DocsLayout from "../../layouts/DocsLayout.astro";
 import RenderingTables from "../../snippets/docs/RenderingTables.astro";
 import UsingAdvectShadowView from "../../snippets/docs/UsingAdvectShadowView.astro";
 import UsingAdvectView from "../../snippets/docs/UsingAdvectView.astro";
@@ -9,14 +8,17 @@ import UsingFor from "../../snippets/docs/UsingFor.astro";
 import UsingIf from "../../snippets/docs/UsingIf.astro";
 import UsingOf from "../../snippets/docs/UsingOf.astro";
 
+import DocsLayout from "../../layouts/DocsLayout.astro"
+
 export const pageInfo: DocPage = {
     name:"Templating",
-    index:2
+    index:2,
+    slug:'templating'
+
 }
 ---
 
-<DocsLayout docPages={docPages}>
-
+<DocsLayout {...Astro.props}>
     <div class="container">
         <section>
             <div class="content">
