--- a/advect.org/src/layouts/BlogLayout.astro
+++ b/advect.org/src/layouts/BlogLayout.astro
@@ -6,18 +6,7 @@ import HeadAssets from "./HeadAssets.astro";
 import { docPages } from "../data/docs";
 import { blogPages } from "../data/blog";
 import Breadcrumb from "../components/Breadcrumb.astro";
-import BreadcrumbBlog from "../components/BreadcrumbBlog.astro";
 
-const sortedBlogPages = blogPages.sort((a, b) => {
-  return a.pageInfo.index - b.pageInfo.index;
-});
-
-const currentPage = sortedBlogPages.findIndex(
-  (p) => p.url.toLocaleLowerCase() == Astro.url.pathname
-);
-
-const nextPage = sortedBlogPages.at(currentPage + 1);
-const prevPage = sortedBlogPages?.[currentPage - 1];
 ---
 
 <!doctype html>
@@ -39,29 +28,29 @@ const prevPage = sortedBlogPages?.[currentPage - 1];
     <Header docPages={docPages} />
     <main class="px-3">
       <div class="container my-2">
-        <BreadcrumbBlog />
+        <Breadcrumb pagePath={Astro.props.pagePath} pagePrefix="blogs" />
       </div>
       <div>
         <slot />
       </div>
       <div class="is-flex is-justify-content-space-between container mt-5">
         {
-          prevPage 
+        Astro.props.prevPage 
           ? (
-            <a href={prevPage.url} class="button is-gap-1">
+            <a href={`/blog/${Astro.props.prevPage.pageInfo.slug}`} class="button is-gap-1">
                   <ion-icon name="chevron-back-outline" />
                 <span >Previous:</span>
-                <span class="signature-effect">{prevPage.pageInfo.name}</span>
+                <span class="signature-effect">{Astro.props.prevPage.pageInfo.name}</span>
             </a>
           )
           : <span></span>
         }
 
         {
-          nextPage && (
-            <a href={nextPage.url} class="button is-gap-1">
+          Astro.props.nextPage && !Astro.props.nextPage.pageInfo.hide  && (
+            <a href={`/blog/${Astro.props.nextPage.pageInfo.slug}`} class="button is-gap-1">
                 <span >Next:</span>
-                <span class="signature-effect">{nextPage.pageInfo.name}</span>
+                <span class="signature-effect">{Astro.props.nextPage.pageInfo.name}</span>
                   <ion-icon name="chevron-forward-outline" />
             </a>
           )
