--- a/advect.org/src/data/blog/index.astro
+++ b/advect.org/src/data/blog/index.astro
@@ -2,17 +2,17 @@
 import BlogLayout from '../../layouts/BlogLayout.astro';
 import { blogPages, type BlogPage } from '../../data/blog';
 import BlogBlurb from '../../components/BlogBlurb.astro';
-import { pickBy } from 'lodash';
 
 export const pageInfo:BlogPage = {
     name:'Blog home',
     index: -1,
     blurb:'',
-    hide:true
+    hide:true,
+    slug: '/'
 }
 ---
 
-<BlogLayout>
+<BlogLayout {...Astro.props}>
     <div class="container">
         <div class="content">
             <h1 class="title is-1 has-text-centered">Blog</h1>
