--- a/advect.org/src/data/docs/index.astro
+++ b/advect.org/src/data/docs/index.astro
@@ -3,7 +3,7 @@ import InstallingAdvect from "../../snippets/docs/InstallingAdvect.astro";
 import AboutAdvect from "../../snippets/docs/AboutAdvect.astro";
 import DocsLayout from "../../layouts/DocsLayout.astro";
 
-import { type DocPage, docPages } from "../../data/docs";
+import { type DocPage } from "../../data/docs";
 
 export const pageInfo:DocPage ={
   name: "Docs Home",
