--- a/advect.org/src/layouts/BlogLayout.astro
+++ b/advect.org/src/layouts/BlogLayout.astro
@@ -28,7 +28,7 @@ import Breadcrumb from "../components/Breadcrumb.astro";
     <Header docPages={docPages} />
     <main class="px-3">
       <div class="container my-2">
-        <Breadcrumb pagePath={Astro.props.pagePath} allPages={Astro.props.allPages} pagePrefix="blogs" />
+        <Breadcrumb pagePath={Astro.props.pagePath} allPages={Astro.props.allPages} pagePrefix="blog" />
       </div>
       <div>
         <slot />
